<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inferno</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">Acerca de</string>
    <string name="action_search">Buscar</string>
    <string name="action_name_and_text">Nombre/Texto</string>
    <string name="action_basic_search">Búsqueda básica</string>
    <string name="action_extended_search">Búsqueda extendida</string>
    <string name="action_advanced_search">Búsqueda avanzada</string>
    <string name="search_filter">Buscar…</string>
    <string name="basic_search">Básica</string>
    <string name="extended_search">Extendida</string>
    <string name="advanced_search">Avanzada</string>
    <string name="name_filter">Nombre</string>
    <string name="text_filter">Texto</string>
    <string name="caos">Caos</string>
    <string name="locura">Locura</string>
    <string name="muerte">Muerte</string>
    <string name="poder">Poder</string>
    <string name="neutral">Neutral</string>
    <string name="despertar">Despertar</string>
    <string name="insania">Insania</string>
    <string name="conquista">Conquista</string>
    <string name="destino">Destino</string>
    <string name="origen">Origen</string>
    <string name="eterno">Eterno</string>
    <string name="base">Base</string>
    <string name="cdu">CdU</string>
    <string name="path">Senda</string>
    <string name="format">Formato</string>
    <string name="formats">Formatos</string>
    <string name="type">Tipo</string>
    <string name="aliado">Aliado</string>
    <string name="arma">Arma</string>
    <string name="escenario">Escenario</string>
    <string name="objeto">Objeto</string>
    <string name="ritual">Ritual</string>
    <string name="demonio">Demonio</string>
    <string name="ficha">Ficha</string>
    <string name="button_search">Buscar</string>
    <string name="title_card_pool">Cartas</string>
    <string name="title_activity_card_pool">Cartas</string>
    <string name="card_detail_image">Detalles</string>
    <string name="title_activity_card_details">Carta filtrada</string>
    <string name="title_activity_basic_searcher">Buscador básico</string>
    <string name="title_activity_extended_card_searcher">Buscador extendido</string>
    <string name="subtype">Subtipo</string>
    <string name="art">Arte</string>
    <string name="edition">Edición</string>
    <string name="supertype">Supertipo</string>
    <string name="ability">Habilidad</string>
    <string name="rarity">Rareza</string>
    <string name="cost">Coste</string>
    <string name="str">FUE</string>
    <string name="res">RES</string>
    <string name="text">Texto</string>
    <string name="tokens_filter">Mostrar fichas</string>
    <string name="x_values_filter">Incluir valores X</string>
    <string name="title_activity_card_view">Cartas</string>
    <string name="flip_card">Dar vuelta</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="add_filter">Agregar Filtro</string>
    <string name="clear">Limpiar</string>
    <string name="include_x">X?</string>
    <string name="order_by">Orden:&#160;</string>
    <string name="ascending">&#x25BC;</string>
    <string name="descending">&#x25B2;</string>
    <string name="view_as">Ver:&#160;</string>
    <string name="list">Lista</string>
    <string name="grid">Grilla</string>
    <string name="settings">Ajustes</string>
    <string name="done">Hecho</string>


    <string name="errata">Errata</string>
    <string name="limited_in">Limitada en</string>
    <string name="banned_in">Baneada en</string>
    <string name="rules">Reglas</string>

    <!-- Editor -->
    <string name="card">Carta</string>
    <string name="deck">Mazo</string>
    <string name="add_to">Agregar a&#8230;</string>
    <string name="delete_deck">¿Eliminar &#160;</string>
    <string name="add_card">Agregar carta</string>
    <string name="card_added">Carta agregada</string>
    <string name="qty">Cantidad</string>
    <string name="ok">Ok</string>
    <string name="edit">Editar</string>

    <!-- About -->
    <string name="about">Acerca de</string>
    <string name="about_info">
        Web oficial: &lt;a href="http://www.inferno.com.ar"&gt;www.inferno.com.ar&lt;/a&gt;.
        &lt;br&gt;&lt;br&gt;
        Envía dudas, sugerencias o inquietudes a
        &lt;a href="mailto:peltashield@gmail.com"&gt;peltashield@gmail.com&lt;/a&gt;.
        &lt;br&gt;&lt;br&gt;
        Desarrollado por PeltaShield
        (&lt;a href="http://www.peltashield.com"&gt;www.peltashield.com&lt;/a&gt;).
        &lt;br&gt;&lt;br&gt;
        Inferno es un producto de OMG! Entretenimiento.
        &lt;br&gt;
        &#169;2016. Todos los derechos reservados.
    </string>
    <string name="name">Nombre</string>
    <string name="legend">Leyenda</string>
    <string name="artist">Arista</string>
    <string name="cost_char">Cos</string>
    <string name="str_char">Fue</string>
    <string name="res_char">Res</string>
    <string name="no_value">&#160;&#160;&#160;</string>

    <string name="no_card_found">Carta no encontrada</string>
    <string name="card_found">&#160;cartas encontradas</string>
    <string name="title_activity_searchers">Buscar carta</string>

    <string name="share_with">Compartir en&#8230;</string>

    <!-- Downloader Activity -->
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete.  Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>

    <string name="action_settings">Settings</string>

    <!-- Tournament strings -->
    <string name="action_tournament">Gestionar torneo</string>
    <string name="card_lists">Listas de cartas</string>
    <string name="place">Lugar:&#160;</string>
    <string name="player">Jugador</string>
    <string name="players">Jugadores</string>
    <string name="accept">Aceptar</string>
    <string name="to_continue">Continuar</string>
    <string name="reset">Reset</string>
    <string name="add">Agregar</string>
    <string name="delete_player">¿Eliminar a jugador&#160;</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="saved_place">SavedPlace</string>
    <string name="saved_players">SavedPlayers</string>
    <string name="saved_round">SavedRound</string>
    <string name="saved_tournament">SavedTournament</string>
    <string name="do_reset">Resetear</string>
    <string name="reset_tournament">¿Resetear torneo?</string>
    <string name="reset_about">Se perderán todos los datos (jugadores, partidas) del
        torneo actual.</string>
    <string name="players_required">Se necesitan más jugadores para el torneo</string>
    <string name="player_present">jugador ya ingresado</string>

    <string name="standings">Posiciones</string>
    <string name="standing_pos">Ps</string>
    <string name="standing_name">Jugador</string>
    <string name="standing_score">PT</string>
    <string name="standing_won">G</string>
    <string name="standing_drew">E</string>
    <string name="standing_lost">P</string>
    <string name="standing_wins">PF</string>
    <string name="standing_looses">PC</string>

    <string name="round">Ronda</string>
    <string name="end_round">Terminar Ronda</string>

    <string name="saved_view_as">SavedViewAs</string>


</resources>
